--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -465,14 +465,14 @@ map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
 # Personal Directories
-map gcc cd ~/.dotfiles
-map gcr cd ~/.dotfiles/ranger/.config/ranger
-map gca cd ~/.dotfiles/alacritty/.config/alacritty
-map gcp cd ~/.dotfiles/polybar/.config/polybar
-map gcq cd ~/.dotfiles/qtile/.config/qtile
-map gci cd ~/.dotfiles/i3/.config/i3
-map gcv cd ~/.dotfiles/nvim/.config/nvim/
-map gck cd ~/.dotfiles/kitty/.config/kitty
+map gcc cd ~/.config
+map gcr cd ~/.config/ranger
+map gca cd ~/.config/alacritty
+map gcp cd ~/.config/polybar
+map gcq cd ~/.config/qtile
+map gci cd ~/.config/i3
+map gcv cd ~/.config/nvim/
+map gck cd ~/.config/kitty
 map gd cd ~/Documents
 map gN cd ~/Documents/Notebooks
 map gb cd ~/.magBin
