--- a/.config/spotifyd/spotifyd.conf
+++ b/.config/spotifyd/spotifyd.conf
@@ -11,7 +11,7 @@ username = "1297262198"
 #
 # This is an alternative to the `password` field. Both
 # can't be used simultaneously.
-password_cmd = "pass stream/spotify"
+password_cmd = "pass Stream/Spotify"
 
 # If set to true, `spotifyd` tries to look up your
 # password in the system's password storage.
