--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -473,6 +473,7 @@ map gcq cd ~/.config/qtile
 map gci cd ~/.config/i3
 map gcv cd ~/.config/nvim/
 map gck cd ~/.config/kitty
+map gcm cd ~/.xmonad
 map gd cd ~/Documents
 map gN cd ~/Documents/Notebooks
 map gb cd ~/.magBin
