--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,7 +12,8 @@
 ;=====================================================
 
 [colors]
-include-file = ${env:HOME}/.config/polybar/colors
+; include-file = ${env:HOME}/.config/polybar/colors
+include-file = ${env:HOME}/colors
 
 [global/wm]
 ;https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
@@ -21,8 +22,8 @@ margin-bottom = 0
 
 [settings]
 ;https://github.com/jaagr/polybar/wiki/Configuration#application-settings
-throttle-output = 5
-throttle-output-for = 10
+; throttle-output = 5
+; throttle-output-for = 10
 screenchange-reload = true
 compositing-background = over
 compositing-foreground = over
@@ -33,17 +34,19 @@ compositing-border = over
 ; Define fallback values used by all module formats
 format-foreground = #FF0000
 format-background = #00FF00
-format-underline =
-format-overline =
-format-spacing =
-format-padding =
-format-margin =
-format-offset =
+; format-underline =
+; format-overline =
+; format-spacing =
+; format-padding =
+; format-margin =
+; format-offset =
 
 [bars]
-include-directory = ${env:HOME}/.config/polybar/bars
+; include-directory = ${env:HOME}/.config/polybar/bars
+include-directory = ${env:HOME}/bars
 
 [modules]
-include-directory = ${env:HOME}/.config/polybar/modules
+; include-directory = ${env:HOME}/.config/polybar/modules
+include-directory = ${env:HOME}/modules
 # vim:ft=dosini
 
