New keybinds for usb mount operations in Ranger

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -388,6 +388,14 @@ map Ms linemode sizemtime
 map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
+# USB Operations
+map Ma shell udisksctl mount -b /dev/sda1
+map Mb shell udisksctl mount -b /dev/sdb1
+map Mc shell udisksctl mount -b /dev/sdc1
+map Ua shell udisksctl unmount -b /dev/sda1
+map Ub shell udisksctl unmount -b /dev/sdb1
+map Uc shell udisksctl unmount -b /dev/sdc1
+
 # Tagging / Marking
 map t       tag_toggle
 map ut      tag_remove
