Refactored polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,9 +11,13 @@
 ;
 ;=====================================================
 
+[config]
+include-file = ${env:HOME}/barconfig
+
 [colors]
 ; include-file = ${env:HOME}/.config/polybar/colors
 include-file = ${env:HOME}/colors
+
 
 [global/wm]
 ;https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
