--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -389,12 +389,12 @@ map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
 # USB Operations
-map Ma shell udisksctl mount -b /dev/sda1
-map Mb shell udisksctl mount -b /dev/sdb1
-map Mc shell udisksctl mount -b /dev/sdc1
-map Ua shell udisksctl unmount -b /dev/sda1
-map Ub shell udisksctl unmount -b /dev/sdb1
-map Uc shell udisksctl unmount -b /dev/sdc1
+map Ma shell udisksctl mount -b /dev/sda1; && notify-send "sda1 mounted"
+map Mb shell udisksctl mount -b /dev/sdb1 && notify-send "sdb1 mounted"
+map Mc shell udisksctl mount -b /dev/sdc1 && notify-send "sdc1 mounted"
+map Ua shell udisksctl unmount -b /dev/sda1 && notify-send "sda1 unmounted"
+map Ub shell udisksctl unmount -b /dev/sdb1 && notify-send "sdb1 unmounted"
+map Uc shell udisksctl unmount -b /dev/sdc1 && notify-send "sdc1 unmounted"
 
 # Tagging / Marking
 map t       tag_toggle
