--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -68,15 +68,15 @@ conky.config = {
 
 	--Placement
 
-	alignment = 'middle_right',					-- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+	alignment = 'middle_left',					-- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
 																		-- middle_left,middle_middle,middle_right,none
 	--Arch Duoscreen
 	--gap_x = -1910,
-	gap_x = 15,									-- pixels between right or left border
+	gap_x = 50,									-- pixels between right or left border
 	gap_y = 0,									-- pixels between bottom or left border
 	minimum_height = 600,						-- minimum height of window
 	minimum_width = 475,						-- minimum width of window
-	maximum_width = 600,						-- maximum width of window
+	maximum_width = 475,						-- maximum width of window
 
 	--Graphical
 
@@ -128,15 +128,15 @@ conky.config = {
 	--Colours
 
 	default_color = '#D9DDE2',  				-- default color and border color
-	color1 = '#FF0000',
-	color2 = '#3e5570',
-	color3 = '#cccccc',
-	color4 = '#D9BC83',
-	color5 = '#00BFFF',                         --teal
+	color1 = '#FF0000', -- red
+	color2 = '#CFCFC2', -- blue
+	color3 = '#cccccc', -- grey
+	color4 = '#D9BC83', -- ambar
+	color5 = '#75715E',                         --teal
 	color6 = '#FFFFFF',                         --white
 
 	--Signal Colours
-	color7 = '#C0FF00',  						--green
+	color7 = '#F8F8F2',  						--green
 	color8 = '#FFA726',  						--orange
 	color9 = '#F1544B',  						--firebrick
 
@@ -146,6 +146,7 @@ conky.config = {
 };
 
 conky.text = [[
+# ${image ~/sc.png -p 40,50 -s 160x160 -f 86400}
 ${color6}${voffset 4}${font GE Inspira:size=36}${alignc}${time %l}:${time %M} ${time %p}${font}${color}
 ${color6}${voffset 4}${font GE Inspira:size=12}${alignc}${time %A} ${time %B} ${time %e}, ${time %Y}${font}${color}
 ${color5}${font Roboto:size=10}${voffset 2}S Y S T E M   ${hr 2}${font}${color}
