--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,5 +22,15 @@ bind-key h split-window -v
 # Reloads config file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 # Source
 # https://www.youtube.com/watch?v=bjBjZvZsgks&list=PLT98CRl2KxKGiyV1u6wHDV8VwcQdzfuKe&index=5
