Various minor changes

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -87,7 +87,7 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Define the "editor" for text files as first action
 # mime ^text, label editor,  ext org = emacs "$@"
 ext org, X, flag f = emacs -- "$@"
-ext led, X, flag f = emacs -- "$@"
+ext ldg, X, flag f = emacs -- "$@"
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
