--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,6 +1,6 @@
 default-cache-ttl 604800
 max-cache-ttl 604800
 pinentry-program /usr/bin/pinentry-gtk-2
-default-user Marcelo
+default-user Marcelo Galvan
 default-recipient-self
 
