--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -88,10 +88,14 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # mime ^text, label editor,  ext org = emacs "$@"
 ext org, X, flag f = emacs -- "$@"
 ext ldg, X, flag f = emacs -- "$@"
-mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
-mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
-!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+# mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+# mime ^text,  label pager  = "$PAGER" -- "$@"
+# !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+# !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+mime ^text,  label editor = nvim -- "$@"
+mime ^text,  label pager  = bat -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim -- "$@"
+!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = bat -- "$@"
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
