--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1247,14 +1247,14 @@ map kitty_mod+o pass_selection_to_program
 map kitty_mod+up        scroll_page_up
 map kitty_mod+down      scroll_page_down
 
-map kitty_mod+u         scroll_page_up
-map kitty_mod+d         scroll_page_down
+# map kitty_mod+u         scroll_page_up
+# map kitty_mod+d         scroll_page_down
 
 map kitty_mod+page_up   scroll_line_up
 map kitty_mod+page_down scroll_line_down
 map kitty_mod+home      scroll_home
 map kitty_mod+end       scroll_end
-map kitty_mod+h         show_scrollback
+map kitty_mod+d         show_scrollback
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
@@ -1324,8 +1324,8 @@ map kitty_mod+0 tenth_window
 
 #: Tab management {{{
 
-map kitty_mod+right next_tab
-map kitty_mod+left  previous_tab
+map kitty_mod+l     next_tab
+map kitty_mod+h     previous_tab
 map kitty_mod+t     new_tab
 map kitty_mod+q     close_tab
 map shift+cmd+w     close_os_window
@@ -1350,7 +1350,7 @@ map kitty_mod+alt+t set_tab_title
 
 #: Layout management {{{
 
-map kitty_mod+l next_layout
+# map kitty_mod+l next_layout
 
 #: You can also create shortcuts to switch to specific layouts::
 
