--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,36 +1,41 @@
-# Send prefix
-# Pone el prefix de C-b  C-a
-set-option -g prefix C-g
-unbind-key C-g
-bind-key C-g send-prefix
+unbind-key C-b
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
  
-# Use Alt-arrow keys to switch panes
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
  
-# Shift arrow to switch windows
 bind -n M-n previous-window
 bind -n M-p next-window
  
-# Set easier window split keys
 bind-key v split-window -h
 bind-key h split-window -v
+
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+bind '"' split-window -v -c "#{pane-current-path}"
+bind % split-window -h -c "#{pane-current-path}"
  
-# Easy config reload
 # Reloads config file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
-# List of plugins
+# To install plugins 'C-Space I'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
-
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# Source
+# Sources
 # https://www.youtube.com/watch?v=bjBjZvZsgks&list=PLT98CRl2KxKGiyV1u6wHDV8VwcQdzfuKe&index=5
+# https://www.youtube.com/watch?v=DzNmUNvnB04
