--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -548,7 +548,7 @@ draw_minimal_borders yes
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-window_margin_width 30
+window_margin_width 10 10 0
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
