--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,36 @@
+# Sources
+# https://www.youtube.com/watch?v=bjBjZvZsgks&list=PLT98CRl2KxKGiyV1u6wHDV8VwcQdzfuKe&index=5
+# https://www.youtube.com/watch?v=DzNmUNvnB04
+
+set -ga terminal-overrides ",screen-256color*:Tc"
+set-option -g default-terminal "screen-256color"
+set -s escape-time 0
+
 unbind-key C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
- 
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
- 
-bind -n M-n previous-window
-bind -n M-p next-window
- 
-bind-key v split-window -h
-bind-key h split-window -v
+
+set -g status-style 'bg=#333333 fg=#5eacd3'
+set -g base-index 1
 
 set-window-option -g mode-keys vi
+ 
+# bind -r k select-pane -U
+# bind -r j select-pane -D
+# bind -r h select-pane -L
+# bind -r l select-pane -R
+
+bind -r ^ last-window
+bind -r q kill-window
+
+# bind -r t new-window
+# bind -r h previous-window
+# bind -r l next-window
+
+bind -r h select-window -t 1
+bind -r t select-window -t 2
+bind -r n select-window -t 3
+ 
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
@@ -25,17 +42,35 @@ bind % split-window -h -c "#{pane-current-path}"
 # Reloads config file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
-# To install plugins 'C-Space I'
+
+bind-key -r f run-shell "tmux neww ~/.magBin/tmux-sessionizer"
+
+bind-key -r i run-shell "tmux neww ~/.magBin/magref"
+
+# bind-key -r G run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/"
+# bind-key -r C run-shell "~/.magBin/tmux-sessionizer ~/work/tvui"
+# bind-key -r R run-shell "~/.magBin/tmux-sessionizer ~/work/milo"
+# bind-key -r L run-shell "~/.magBin/tmux-sessionizer ~/work/hpack"
+
+# bind-key -r H run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/22_Professional/22.03_PapeleriaEnLinea"
+# bind-key -r T run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/21_Portafolio/"
+# bind-key -r N run-shell "~/.magBin/tmux-sessionizer ~/personal/harpoon"
+bind-key -r S run-shell "~/.magBin/tmux-sessionizer ~/40_Notebooks/Reference/"
+
+# To install plugins 'prefix I'
+# To uninstall prefix + M + u
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'schasse/tmux-jump'
 set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
+# TMUX FINGERS tmux-prefix+F
+set -g @fingers-keyboard-layout 'dvorak'
+set -g @fingers-pattern-0 ''
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-# Sources
-# https://www.youtube.com/watch?v=bjBjZvZsgks&list=PLT98CRl2KxKGiyV1u6wHDV8VwcQdzfuKe&index=5
-# https://www.youtube.com/watch?v=DzNmUNvnB04
