Migrated from kitty to alacritty

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
 
+set -g history-limit 1000
+
 unbind-key C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
@@ -43,7 +45,7 @@ bind % split-window -h -c "#{pane-current-path}"
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
 
-bind-key -r f run-shell "tmux neww ~/.magBin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.magBin/ts"
 
 bind-key -r i run-shell "tmux neww ~/.magBin/magref"
 
