--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,7 @@
-# Crear archivo en ~/.config/alacritty/alacritty.yml
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
+#
+# import:
+#   - ~/.config/alacritty/themes/themes/ayu_dark.yaml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
@@ -35,8 +37,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 60
-    y: 60
+    x: 10
+    y: 10
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
@@ -102,7 +104,7 @@ font:
     # family: 
 
     # The `style` can be specified to pick a specific face.
-    style: Normal
+    style: Bold
 
   # Bold font face
   bold:
@@ -138,8 +140,7 @@ font:
     style: Bold Italic
 
   # Point size
-  # size: 7
-  size: 7
+  size: 9.5
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -173,16 +174,44 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Tomorrow Night Bright)
 colors:
   # Default colors
   primary:
+    background: '0x0A0E14'
+    foreground: '0xB3B1AD'
+
+  # Normal colors
+  normal:
+    black:   '0x01060E'
+    red:     '0xEA6C73'
+    green:   '0x91B362'
+    yellow:  '0xF9AF4F'
+    blue:    '0x53BDFA'
+    magenta: '0xFAE994'
+    cyan:    '0x90E1C6'
+    white:   '0xC7C7C7'
+
+  # Bright colors
+  bright:
+    black:   '0x686868'
+    red:     '0xF07178'
+    green:   '0xC2D94C'
+    yellow:  '0xFFB454'
+    blue:    '0x59C2FF'
+    magenta: '0xFFEE99'
+    cyan:    '0x95E6CB'
+    white:   '0xFFFFFF'
+
+# Colors (Tomorrow Night Bright)
+# colors:
+  # Default colors
+  # primary:
     # hard contrast: background = '#1d2021'
     # soft contrast: background = '#32302f'
     #background: '#282828'
     #foreground: '#000000'
     # gruvbox
-    background: '#1d2021'
+    # background: '#1d2021'
     # foreground: '#ebdbb2'
 
     # nord
@@ -191,7 +220,7 @@ colors:
 
     # Monkai
     # background: '#272822'
-    foreground: '#F8F8F2'
+    # foreground: '#F8F8F2'
 
     # Bright and dim foreground colors
     #
@@ -219,40 +248,40 @@ colors:
   #  background: '#404040'
 
   # Normal colors
-  normal:
-    black:   '#1d2021'
-    red:     '#cc241d'
-    green:   '#98971a'
-    yellow:  '#d79921'
-    blue:    '#458588'
-    magenta: '#b16286'
-    cyan:    '#689d6a'
-    white:   '#a89984'
+  # normal:
+  #   black:   '#1d2021'
+  #   red:     '#cc241d'
+  #   green:   '#98971a'
+  #   yellow:  '#d79921'
+  #   blue:    '#458588'
+  #   magenta: '#b16286'
+  #   cyan:    '#689d6a'
+  #   white:   '#a89984'
 
   # Bright colors
-  bright:
-    black:   '#928374'
-    red:     '#fb4934'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#ebdbb2'
+  # bright:
+  #   black:   '#928374'
+  #   red:     '#fb4934'
+  #   green:   '#b8bb26'
+  #   yellow:  '#fabd2f'
+  #   blue:    '#83a598'
+  #   magenta: '#d3869b'
+  #   cyan:    '#8ec07c'
+  #   white:   '#ebdbb2'
 
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
-  dim:
-    black:   '#000000'
-    red:     '#8c3336'
-    green:   '#7a8530'
-    yellow:  '#97822e'
-    blue:    '#506d8f'
-    magenta: '#80638e'
-    cyan:    '#497e7a'
-    white:   '#9a9a9a'
+  # dim:
+  #   black:   '#000000'
+  #   red:     '#8c3336'
+  #   green:   '#7a8530'
+  #   yellow:  '#97822e'
+  #   blue:    '#506d8f'
+  #   magenta: '#80638e'
+  #   cyan:    '#497e7a'
+  #   white:   '#9a9a9a'
 
   # Indexed Colors
   #
