--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,12 +1,10 @@
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
-#
-# import:
-#   - ~/.config/alacritty/themes/themes/ayu_dark.yaml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
+  WINIT_X11_SCALE_FACTOR: "1"
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
@@ -140,7 +138,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 9.5
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -172,71 +170,46 @@ font:
   #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-#draw_bold_text_with_bright_colors: false
+# draw_bold_text_with_bright_colors: false
+#
 
+# More themes https://github.com/alacritty/alacritty-theme
+
+# Colors (PaperColor - Dark)
 colors:
-  # Default colors
   primary:
-    background: '0x0A0E14'
-    foreground: '0xB3B1AD'
+    background: '0x1c1c1c'
+    foreground: '0xd0d0d0'
 
-  # Normal colors
+  cursor:
+    text: '0x1c1c1c'
+    cursor: '0x808080'
+
   normal:
-    black:   '0x01060E'
-    red:     '0xEA6C73'
-    green:   '0x91B362'
-    yellow:  '0xF9AF4F'
-    blue:    '0x53BDFA'
-    magenta: '0xFAE994'
-    cyan:    '0x90E1C6'
-    white:   '0xC7C7C7'
+    black:   '0x1c1c1c'
+    red:     '0xaf005f'
+    green:   '0x5faf00'
+    yellow:  '0xd7af5f'
+    blue:    '0x5fafd7'
+    magenta: '0x808080'
+    cyan:    '0xd7875f'
+    white:   '0xd0d0d0'
 
-  # Bright colors
   bright:
-    black:   '0x686868'
-    red:     '0xF07178'
-    green:   '0xC2D94C'
-    yellow:  '0xFFB454'
-    blue:    '0x59C2FF'
-    magenta: '0xFFEE99'
-    cyan:    '0x95E6CB'
-    white:   '0xFFFFFF'
-
-# Colors (Tomorrow Night Bright)
-# colors:
-  # Default colors
-  # primary:
-    # hard contrast: background = '#1d2021'
-    # soft contrast: background = '#32302f'
-    #background: '#282828'
-    #foreground: '#000000'
-    # gruvbox
-    # background: '#1d2021'
-    # foreground: '#ebdbb2'
-
-    # nord
-    # background: '#2E3440'
-    # foreground: '#D8DEE9'
-
-    # Monkai
-    # background: '#272822'
-    # foreground: '#F8F8F2'
-
-    # Bright and dim foreground colors
-    #
+    black:   '0x585858'
+    red:     '0x5faf5f'
+    green:   '0xafd700'
+    yellow:  '0xaf87d7'
+    blue:    '0xffaf00'
+    magenta: '0xffaf00'
+    cyan:    '0x00afaf'
+    white:   '0x5f8787'
+    
     # The dimmed foreground color is calculated automatically if it is not present.
     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
     # is `false`, the normal foreground color will be used.
     #dim_foreground: '#9a9a9a'
     #bright_foreground: '#ffffff'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are unset,
-  # the cursor color will be the inverse of the cell color.
-  #cursor:
-  #  text: '#000000'
-  #  cursor: '#ffffff'
 
   # Selection colors
   #
@@ -246,28 +219,6 @@ colors:
   #selection:
   #  text: '#eaeaea'
   #  background: '#404040'
-
-  # Normal colors
-  # normal:
-  #   black:   '#1d2021'
-  #   red:     '#cc241d'
-  #   green:   '#98971a'
-  #   yellow:  '#d79921'
-  #   blue:    '#458588'
-  #   magenta: '#b16286'
-  #   cyan:    '#689d6a'
-  #   white:   '#a89984'
-
-  # Bright colors
-  # bright:
-  #   black:   '#928374'
-  #   red:     '#fb4934'
-  #   green:   '#b8bb26'
-  #   yellow:  '#fabd2f'
-  #   blue:    '#83a598'
-  #   magenta: '#d3869b'
-  #   cyan:    '#8ec07c'
-  #   white:   '#ebdbb2'
 
   # Dim colors
   #
