--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,9 +45,9 @@ bind % split-window -h -c "#{pane-current-path}"
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
 
-bind-key -r f run-shell "tmux neww ~/.magBin/ts"
+bind-key -r f run-shell "tmux neww ~/.local/bin/ts"
 
-bind-key -r i run-shell "tmux neww ~/.magBin/magref"
+bind-key -r i run-shell "tmux neww ~/.local/bin/magref"
 
 # bind-key -r G run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/"
 # bind-key -r C run-shell "~/.magBin/tmux-sessionizer ~/work/tvui"
