New neovim plugins, snipets and minor changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,23 +49,25 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/ts"
 
 bind-key -r i run-shell "tmux neww ~/.local/bin/magref"
 
-# bind-key -r G run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/"
-# bind-key -r C run-shell "~/.magBin/tmux-sessionizer ~/work/tvui"
-# bind-key -r R run-shell "~/.magBin/tmux-sessionizer ~/work/milo"
-# bind-key -r L run-shell "~/.magBin/tmux-sessionizer ~/work/hpack"
+# bind-key -r G run-shell "~/.local/bin/ts ~/20_Projects/"
+# bind-key -r C run-shell "~/.local/bin/ts ~/20_Projects/"
+# bind-key -r R run-shell "~/.local/bin/ts ~/20_Projects/"
+# bind-key -r L run-shell "~/.local/bin/ts ~/20_Projects/"
 
-# bind-key -r H run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/22_Professional/22.03_PapeleriaEnLinea"
-# bind-key -r T run-shell "~/.magBin/tmux-sessionizer ~/20_Projects/21_Portafolio/"
-# bind-key -r N run-shell "~/.magBin/tmux-sessionizer ~/personal/harpoon"
-bind-key -r S run-shell "~/.magBin/tmux-sessionizer ~/40_Notebooks/Reference/"
+# bind-key -r H run-shell "~/.local/bin/ts ~/20_Projects/"
+# bind-key -r T run-shell "~/.local/bin/ts ~/20_Projects/"
+bind-key -r N run-shell "~/.local/bin/ts ~/20_Projects/20.04_Pomodoria/"
+bind-key -r S run-shell "~/.local/bin/ts ~/40_Notebooks/MagWiki/wiki/"
 
 # To install plugins 'prefix I'
-# To uninstall prefix + M + u
+# To uninstall prefix + Meta + u
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'Morantron/tmux-fingers'
+
+# Depends on ruby `sudo pacman -S ruby`
 set -g @plugin 'schasse/tmux-jump'
 set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
@@ -73,6 +75,8 @@ set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percen
 set -g @fingers-keyboard-layout 'dvorak'
 set -g @fingers-pattern-0 ''
 
+
+# To install git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
